--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "tsc --build tsconfig.json"
+    "build": "tsc --build tsconfig.json",
+    "webpack": "webpack --mode development"
   },
   "dependencies": {
-    "@mapbox/mapbox-gl-geocoder": "^4.4.1",
+    "@types/leaflet": "^1.5.1",
     "chartist": "^0.11.3",
     "chartist-plugin-legend": "^0.6.2",
     "gpx-parser-builder": "^1.0.1",
-    "mapbox-gl": "^1.2.1",
+    "leaflet": "^1.5.1",
+    "leaflet-control-geocoder": "^1.9.0",
     "moment": "^2.24.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
@@ -19,7 +21,14 @@
   },
   "devDependencies": {
     "@types/mapbox-gl": "^0.54.1",
-    "electron": "^6.0.2",
-    "typescript-tslint-plugin": "^0.3.1"
+    "css-loader": "^3.2.0",
+    "electron": "^6.0.12",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.0.0",
+    "subpackage": "^1.1.0",
+    "typescript-tslint-plugin": "^0.3.1",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9"
   }
 }
