--- a/package.json
+++ b/package.json
@@ -8,18 +8,21 @@
     "webpack": "webpack --mode development"
   },
   "dependencies": {
+    "@types/jszip": "^3.1.6",
     "@types/leaflet": "^1.5.1",
     "chartist": "^0.11.3",
     "chartist-plugin-legend": "^0.6.2",
     "gpx-parser-builder": "^1.0.1",
+    "jszip": "^3.2.2",
     "leaflet": "^1.5.1",
     "leaflet-control-geocoder": "^1.9.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "simple-git": "^1.124.0",
     "stream": "0.0.2",
-    "three": "^0.110.0",
+    "three": "^0.111.0",
     "three-orbitcontrols": "^2.108.1",
     "timers": "^0.1.1",
     "xml2js": "^0.4.19"
@@ -29,20 +32,20 @@
     "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
     "@babel/preset-env": "^7.6.3",
     "@open-wc/building-webpack": "^2.7.3",
-    "@types/mapbox-gl": "^0.54.1",
+    "@types/mapbox-gl": "^1.6.1",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.4",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.2.0",
-    "electron": "^6.0.12",
-    "file-loader": "^4.2.0",
+    "electron": "^7.1.7",
+    "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "ssh-webpack-plugin": "^0.1.7",
     "style-loader": "^1.0.0",
     "text-loader": "0.0.1",
     "ts-loader": "^6.2.0",
     "typescript": "^3.6.4",
-    "typescript-tslint-plugin": "^0.3.1",
+    "typescript-tslint-plugin": "^0.5.5",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
