--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "name": "p3-electron",
+  "name": "Pathfinder",
+  "version": "1.0.0",
+  "description": "A path finding app",
   "main": "main.js",
   "scripts": {
     "start_webpack": "webpack-dev-server --mode development",
@@ -7,6 +9,8 @@
     "build": "tsc --build tsconfig.json",
     "webpack": "webpack --mode development"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@types/jszip": "^3.1.6",
     "@types/leaflet": "^1.5.1",
@@ -18,36 +22,35 @@
     "leaflet-control-geocoder": "^1.9.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "redux": "^4.0.4",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "simple-git": "^1.124.0",
+    "simple-git": "^2.5.0",
     "stream": "0.0.2",
-    "three": "^0.111.0",
+    "three": "^0.117.1",
     "three-orbitcontrols": "^2.108.1",
     "timers": "^0.1.1",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
-    "@babel/preset-env": "^7.6.3",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
+    "@babel/preset-env": "^7.9.6",
     "@open-wc/building-webpack": "^2.7.3",
     "@types/mapbox-gl": "^1.6.1",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.2.0",
-    "electron": "^7.1.7",
-    "file-loader": "^5.0.2",
-    "html-webpack-plugin": "^3.2.0",
-    "ssh-webpack-plugin": "^0.1.7",
-    "style-loader": "^1.0.0",
+    "copy-webpack-plugin": "^6.0.1",
+    "css-loader": "^3.5.3",
+    "electron": "9.0.0",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "style-loader": "^1.2.1",
     "text-loader": "0.0.1",
-    "ts-loader": "^6.2.0",
-    "typescript": "^3.6.4",
+    "ts-loader": "^7.0.4",
+    "typescript": "^3.9.3",
     "typescript-tslint-plugin": "^0.5.5",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   }
 }
