--- a/package.json
+++ b/package.json
@@ -37,11 +37,14 @@
     "@babel/preset-env": "^7.9.6",
     "@open-wc/building-webpack": "^2.7.3",
     "@types/mapbox-gl": "^1.6.1",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^3.5.3",
     "electron": "9.0.0",
+    "eslint": "^7.2.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "style-loader": "^1.2.1",
