--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "webpack": "webpack --mode development"
   },
   "author": "Konrad Schmid",
-  "license": "ISC",
+  "license": "Apache-2.0 License",
   "repository": {
     "url": "https://github.com/uid01089/pathfinder"
   },
   "dependencies": {
-    "js_web_comp_lib": "file:src_ts/js_web_comp_lib",
+    "@types/xml2js": "^0.4.5",
     "js_lib": "file:src_ts/lib",
+    "js_web_comp_lib": "file:src_ts/js_web_comp_lib",
     "leaflet": "^1.5.1",
     "leaflet-control-geocoder": "^1.9.0",
     "three": "^0.117.1",
