Update to new js_web_comp_lib

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "src_ts/lib"]
-	path = src_ts/lib
+[submodule "src_ts/js_lib"]
+	path = src_ts/js_lib
 	url = https://github.com/uid01089/js_lib.git
 [submodule "src_ts/js_web_comp_lib"]
 	path = src_ts/js_web_comp_lib
